<resources>
    <string name="app_name">Vienna25</string>
    <string name="vienna_notification_channel_id">Vienna25 notification channel</string>
    <string name="vienna_notification_channel_topic">Vienna25</string>

    <string name="text_splash_title">Welcome to Vienna 25!</string>

    <string name="text_time_days">일</string>
    <string name="text_time_hours">시간</string>
    <string name="text_time_minutes">분</string>
    <string name="text_time_seconds">초</string>

    <string name="format_date">yyyy.MM.dd</string>
    <string name="format_date_time">MM/dd/yyyy hh:mm:ss</string>

    <string-array name="text_images">
        <item>탱버 맞은 비엔나!</item>
        <item>아침부터 뭐하는거야!\n25살이나 먹은 비엔나!</item>
        <item>안녕하세용! 잘부탁드려요!</item>
        <item>25살! 지금 출발합니다!</item>
        <item>급격하게 초췌해진 그들..</item>
        <item>카드값:내가 너를 이끈다.</item>
        <item>우리는 최강파티 25!</item>
    </string-array>

    <string name="text_clock_regex">:</string>
    <string name="text_app_version">앱 버전</string>

    <string name="text_share_complete">링크가 복사되었습니다.</string>
    <string name="text_share_app_download">https://play.google.com/store/apps/details?id=com.joung.vienna</string>

    <string name="text_auto_sign_in">자동 로그인</string>

    <string name="title_sign_in">로그인</string>
    <string name="title_add_note">새로운 흑역사</string>
    <string name="title_setting">환경설정</string>

    <string name="button_sign_in">로그인</string>
    <string name="button_save">저장</string>
    <string name="button_cancel">취소</string>

    <string name="hint_name">이름</string>
    <string name="hint_password">비밀번호</string>

    <string name="hint_title">제목</string>
    <string name="hint_content">내용</string>
    <string name="hint_date">날짜 (ex 2019.03.20)</string>

    <string name="error_text_date_time_parse">날짜 변환 에러</string>

    <string name="error_text_sign_in">로그인 실패</string>

    <string name="error_text_date_format">날짜 입력 방식이 잘못되었습니다.</string>

    <string name="error_text_database">데이터베이스 에러</string>

    <string name="error_text_add_note">흑역사 저장 실패</string>

</resources>
