<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_above="@id/container_count"
        android:layout_alignParentStart="true"
        app:lottie_autoPlay="true"
        app:lottie_fileName="confetti.json"
        app:lottie_loop="true" />

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_above="@id/container_count"
        android:layout_alignParentEnd="true"
        app:lottie_autoPlay="true"
        app:lottie_fileName="confetti.json"
        app:lottie_loop="true" />

    <LinearLayout
        android:id="@+id/container_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="horizontal"
        android:paddingStart="2dp"
        android:paddingEnd="2dp">

        <TextView
            android:id="@+id/text_days"
            style="@style/TextViewNumberTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/TextViewTextTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_time_days" />

        <TextView
            android:id="@+id/text_hours"
            style="@style/TextViewNumberTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/TextViewTextTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_time_hours" />

        <TextView
            android:id="@+id/text_minutes"
            style="@style/TextViewNumberTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/TextViewTextTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_time_minutes" />

        <TextView
            android:id="@+id/text_seconds"
            style="@style/TextViewNumberTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/TextViewTextTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_time_seconds" />

    </LinearLayout>

</RelativeLayout>